Bug 114343 - Adding a new Title Page via Format > Title Page is impossible with a ToC at the beginning of a document
Summary: Adding a new Title Page via Format > Title Page is impossible with a ToC at t...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium minor
Assignee: Justin L
URL:
Whiteboard: target:26.2.0 target:25.8.3
Keywords:
Depends on:
Blocks: TableofContents-Indexes Writer-Page-Break
  Show dependency treegraph
 
Reported: 2017-12-08 13:45 UTC by Clemens Prill
Modified: 2025-10-20 12:37 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Clemens Prill 2017-12-08 13:45:53 UTC
Description:
I can't add a title page if I have a ToC in my document.

Steps to Reproduce:
1. Create a new Writer document
2. Add a ToC to your first page
3. Move your cursor under your generated ToC
4. Choose Format > Title Page/Front Page
5. Choose option to create new page at beginning of document, not transforming current page into a ToC

Actual Results:  
The new first page is a ToC and belongs to the ToC on page two. It looks like my previous existing ToC got extended to both pages.

Expected Results:
I would expect first page to be my title page/front page and my second page to be the ToC.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 5.4.3.2 (x64)
Build-ID: 92a7159f7e4af62137622921e809f8546db437e5


User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:57.0) Gecko/20100101 Firefox/57.0
Comment 1 Dieter 2017-12-08 14:27:15 UTC
If you add the TOC in another line than the first line of a page, you can change the page to a title page or you can add a manual page break. This could be a workaround.

There was another bug some weeks ago about adding a page break, if a TOC is at the beginning of a page. I can't find it, but I think, that your bug is a special case of this bug.
Comment 2 Clemens Prill 2017-12-08 14:35:25 UTC
I can't add a page break before my ToC because page break is denied when cursor is inside ToC, maybe related to #114067. How can I achieve a workaround for just now?
Comment 3 Dieter 2017-12-08 16:09:39 UTC
Yes that was the bug I had in my mind. Actually I have no idea how to deal with the situation, that the TOC is already at the head of the first page.
Comment 4 Clemens Prill 2017-12-08 16:12:21 UTC
I was able to work around this by removing any table I had from first page, inserted a title page and then put all my tables back on page two. This isn't a comfortable workaround but better than beginning a new document with copy & pasting from the old one.
Comment 5 Buovjaga 2017-12-17 19:58:08 UTC
Repro.

Arch Linux 64-bit
LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4

Arch Linux 64-bit
Version: 6.1.0.0.alpha0+
Build ID: 3193e78aba75c5b38d2683d9fd8593820048e8b9
CPU threads: 8; OS: Linux 4.14; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group threaded
Built on December 17th 2017
Comment 6 QA Administrators 2018-12-18 03:42:47 UTC Comment hidden (obsolete)
Comment 7 Dieter 2018-12-18 09:48:09 UTC
Still reproducible with

Version: 6.2.0.0.beta1 (x64)
Build ID: d1b41307be3f8c19fe6f1938cf056e7ff1eb1d18
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
Locale: en-US (de_DE); UI-Language: en-GB
Calc: threaded
Comment 8 Dieter 2020-10-07 06:06:57 UTC
Still present in

Version: 7.0.2.2 (x64)
Build ID: 8349ace3c3162073abd90d81fd06dcfb6b36b994
CPU threads: 4; OS: Windows 10.0 Build 19041; UI render: Skia/Raster; VCL: win
Locale: he-IL (de_DE); UI: en-GB
Calc: threaded
Comment 9 QA Administrators 2022-10-08 03:48:51 UTC Comment hidden (obsolete)
Comment 10 Dieter 2022-10-08 12:31:37 UTC
Still present in

Version: 7.4.1.2 (x64) / LibreOffice Community
Build ID: 3c58a8f3a960df8bc8fd77b461821e42c061c5f0
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL
Comment 11 QA Administrators 2025-03-03 03:10:12 UTC Comment hidden (obsolete)
Comment 12 Dieter 2025-03-17 13:15:00 UTC
Still present in

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 894563ee0e4032019623a97c313af3d833863b1f
CPU threads: 12; OS: Windows 11 X86_64 (build 22631); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL threaded
Comment 13 Justin L 2025-09-18 13:18:32 UTC
Workaround: with the cursor at the beginning of the TOC, you can press Alt-Enter to create an empty paragraph above the TOC (at least in recent versions...).
Comment 14 Commit Notification 2025-09-19 20:42:10 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/932c8227717f44877d77659c444845d39f4156ce

tdf#114343 titlepage: DoSpecialInsert (Alt-Enter) when necessary

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2025-10-20 12:37:37 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/1b6d78398021ebaf59b7d1d3579aab1ba2242d1e

tdf#114343 titlepage: DoSpecialInsert (Alt-Enter) when necessary

It will be available in 25.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.