tdf#114343 titlepage: DoSpecialInsert (Alt-Enter) when necessary

If the document starts with a TOC or a table,
then the title page wizard (Format - Title page)
fails to (properly) insert a page before.

(note that while it DID insert a page before the TOC,
that para-with-page-break is all still "part of the TOC"
and so when the TOC is refreshed, the page break is lost.)

make -srj1 UITest_writer_tests5 \
    UITEST_TEST_NAME=titlePageWizard3.tdf114343.test_tdf114343 \
    SAL_USE_VCLPLUGIN=gen

make -srj1 UITest_writer_tests5 \
    UITEST_TEST_NAME=titlePageWizard3.tdf114343.test2_tdf114343 \
    SAL_USE_VCLPLUGIN=gen

Change-Id: I0eb865259889601c0918096d8dd51fc50d0dca52
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191164
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>